tests/diagnostics_golden/diag_array_concat_fixed_array.txt
Diagnostics Golden: Fixed Array Concatenation Rejection
Source: tests/negative/neg_array_concat_fixed_array.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_array_concat_fixed_array.safe:9:31: error: & operator requires growable arrays; fixed arrays do not support concatenation
  |
  | 9 |       var combined : window = left & right
  |   |                               ^~~~~~~~~~~~
  |
------------------------------------------------------------------------
